--- a/TheraJournal.Core/TheraJournal.Core.csproj
+++ b/TheraJournal.Core/TheraJournal.Core.csproj
@@ -7,13 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\IdentityEntities\" />
     <Folder Include="Domain\RepositoryContracts\" />
     <Folder Include="DTO\" />
-    <Folder Include="Domain\Entities\" />
     <Folder Include="Identity\" />
     <Folder Include="Services\" />
     <Folder Include="ServiceContracts\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
