--- a/TheraJournal.Infrastructure/TheraJournal.Infrastructure.csproj
+++ b/TheraJournal.Infrastructure/TheraJournal.Infrastructure.csproj
@@ -7,8 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DbContext\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TheraJournal.Core\TheraJournal.Core.csproj" />
   </ItemGroup>
 
 </Project>
