--- a/TheraJournal/TheraJournal.WebAPI.csproj
+++ b/TheraJournal/TheraJournal.WebAPI.csproj
@@ -11,7 +11,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="9.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +28,11 @@
     <Folder Include="ClientApp\src\utils\" />
     <Folder Include="ClientApp\src\types\" />
     <Folder Include="ClientApp\src\pages\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TheraJournal.Core\TheraJournal.Core.csproj" />
+    <ProjectReference Include="..\TheraJournal.Infrastructure\TheraJournal.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
