Created env variable for jwt secret, AuthService(not implemented), JwtService(not implemented), and enums. Implementing AuthService.

--- a/TheraJournal/appsettings.json
+++ b/TheraJournal/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-    "AllowedHosts": "*",
+  "AllowedHosts": "*",
     "ConnectionStrings": {
         "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TherapyAppDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+    "Jwt": {
+        "Issuer": "https://localhost:7264",
+        "Audience": "http://localhost:5173",
+        "ExpirationMinutes":  4
     }
 }
