--- a/TheraJournal/TheraJournal.WebAPI.csproj
+++ b/TheraJournal/TheraJournal.WebAPI.csproj
@@ -27,6 +27,7 @@
     <Folder Include="ClientApp\src\hooks\" />
     <Folder Include="ClientApp\src\utils\" />
     <Folder Include="ClientApp\src\types\" />
+    <Folder Include="Controllers\v1\" />
   </ItemGroup>
 
   <ItemGroup>
