setup in program.cs, launchsettings.json, swagger opens on app run.

--- a/TheraJournal/appsettings.json
+++ b/TheraJournal/appsettings.json
@@ -9,9 +9,15 @@
     "ConnectionStrings": {
         "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TherapyAppDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     },
+    "AllowedOrigins": [
+        "http://localhost:4200"
+    ],
     "Jwt": {
         "Issuer": "https://localhost:7264",
         "Audience": "http://localhost:5173",
-        "ExpirationMinutes":  4
+        "ExpirationMinutes": 4
+    },
+    "RefreshToken": {
+        "Expiration_minutes": 60
     }
 }
